# apptodo

./: .env.example  .gitignore  AGENTS.md  BEADS.md  BEADS_GUIDE.md  BEADS_REVIEW.md  BEADS_STRUCTURE.md  DEPLOYMENT_GUIDE.md  DOCKER_MIGRATION.md  Dockerfile  E2E_TESTING_GUIDE.md  E2E_TESTING_SUMMARY.md  E2E_TEST_REPORT.md  FINAL_CHECKLIST.md  FIXES_APPLIED.md  HANDOFF.md  PLAYWRIGHT_VALIDATION.md  README.md  SESSION_STATUS.md  VALIDATION_REPORT.md  add_dependencies.sh  dev.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf  validate.sh
.amp/: settings.json
.beads/: config.yaml  issues.jsonl
app/: README.md
app/backend/: .env.example  BACKEND.md  Dockerfile.dev  README.md  pyproject.toml  requirements.txt
app/backend/alembic/: env.py
app/backend/alembic/versions/: 001_initial_schema.py
app/backend/app/: main.py
app/backend/app/core/: config.py  database.py  dependencies.py  idempotency.py  security.py
app/backend/app/models/: __init__.py  task.py  user.py
app/backend/app/repositories/: category.py  task.py  user.py
app/backend/app/routers/: auth.py  categories.py  tasks.py
app/backend/app/schemas/: category.py  response.py  task.py  user.py
app/backend/app/services/: auth.py  category.py  idempotency.py  task.py
app/backend/migrations/: 001_initial_schema.sql
app/backend/tests/: conftest.py  test_auth.py  test_batch_operations.py  test_idempotency.py  test_security.py  test_task_events.py  test_task_filters.py  test_task_patch.py  test_tasks.py
specs/: BEADS_SETUP.md  BUG_FLOW_ANALYSIS.md  E2E_TESTING.md  PLAN.md  (+4 more)
(+99 files in other folders)
