[project]
name = "apptodo-backend"
version = "1.0.0"
description = "FastAPI backend for AppTodo - Multi-user task management application"
readme = "README.md"
requires-python = ">=3.12,<4"
authors = [{name = "AppTodo Team"}]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.23",
    "aiosqlite==0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "httpx==0.25.1",
    "black==23.12.0",
    "ruff==0.1.8",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
